<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/details_animation"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/details_screen_margin_start"
        android:layout_marginTop="@dimen/details_screen_margin_top"
        android:text="@string/string_details_file_name"
        android:textSize="@dimen/details_labels_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_screen_margin_top"
        android:layout_marginEnd="@dimen/details_screen_margin_start"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/details_screen_default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewStatusValue"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/string_glide_download" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/details_screen_margin_start"
        android:text="@string/string_details_status"
        android:textSize="@dimen/details_labels_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFileName" />

    <TextView
        android:id="@+id/textViewStatusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/details_screen_margin_start"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/details_screen_default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/textViewFileName"
        tools:text="@string/string_details_status" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_screen_button_height"
        android:layout_margin="@dimen/details_screen_button_margin"
        android:background="@color/colorAccent"
        android:text="@string/string_ok_button"
        android:textColor="@color/white"
        android:textSize="@dimen/details_screen_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>